--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.4
 
 environment:
   sdk: ^3.7.0
@@ -42,6 +42,12 @@ dependencies:
   sunmi_scanner: ^0.0.6
   screenshot: ^3.0.0
   gal: ^2.3.1
+  flutter_loadingindicator: ^1.0.1
+  loader_skeleton: ^0.0.4
+  lottie: ^3.1.2
+  flutter_animated_splash: ^0.0.10
+  simple_barcode_scanner: ^0.3.0
+  timezone: ^0.10.1
 
   flutter:
     sdk: flutter
@@ -106,4 +112,5 @@ flutter:
     - assets/images/black_icon.png
     - assets/fonts/dinn.otf
     - assets/images/hakayety_title.png
+    - assets/json/error.json
 
